More abut myself UI issue of alignment is fixed

--- a/src/client/app/cnext/framework/professional-data/professional-data.component.scss
+++ b/src/client/app/cnext/framework/professional-data/professional-data.component.scss
@@ -1,16 +1,16 @@
 .compact-view {
   p {
     float:left;
-    width: 16%;
+    width: 25%;
 
-    &:nth-child(4),
+   /* &:nth-child(4),
     &:nth-child(5) {
       width: 14%;
     }
 
     &:last-child {
       width: 20%;
-    }
+    }*/
   }
 
   &:hover {
