--- a/src/client/css/c-next/common-components/cn-compact-view.scss
+++ b/src/client/css/c-next/common-components/cn-compact-view.scss
@@ -191,6 +191,7 @@ $theme-color: #3694d1;
 .quarter-width {
   width: 25%;
   float:left;
+  margin-top: 15px;
 }
 
 .half-width {
