--- a/src/client/css/common.scss
+++ b/src/client/css/common.scss
@@ -162,6 +162,7 @@ main {
     bottom: 20px;
     vertical-align: middle;
     width: 50px;
+    z-index: 100000;
   }
 }
 
